static/sass/styles.sass
// -----------------------------------------
// get our imports out of the way

@import 'colors'
@import 'constants'
@import 'fonts'

@import 'mixins'
@import 'properties'
@import 'typography'

// @import 'overrides' // overrides theme-specific , e.g. bootstrap


// -----------------------------------------
// html elements

html, body 
    padding: 0
    margin: 0

body

    font-family: 'Roboto', 'Helvetica Neue', 'Arial', sans-serif
    font-weight: 300
    color: $text_color

a
    color: $purple

    &:hover
        color: $dark_orange

    &.inverse
        background-color: $orange
        color: $white   

        &:hover
            background-color: $dark_orange !important

h1, h2, h3, h4, h5, h6
    font-weight: 100

h2
    color: $purple
    font-size: 2.4rem
    padding-bottom: 2.8rem
    padding-top: 2rem
    font-weight: 300

p.copy
    font-size: 1.8rem
    
.centered
    text-align: center


// nav

.main-menu-header
    height: auto
    background: $purple
    
    .logo
        float: left
        max-width: 220px

    .open-menu
        float: right
        padding: 1rem
        font-size: 2rem

        &:hover
            background: $dark_purple
            
    
    .open-menu-icon
        color: white

.main-menu-overlay
    position: fixed
    top: 0
    bottom: 0
    right: 0
    left: 0
    color: $white
    background: $purple
    z-index: 100

    .main-menu
        clear: both
        @include unstyled-list()
        color: white
        text-transform: uppercase
        font-size: 1.8rem
        text-align: center

        li
            line-height: 3rem

        a
            color: white
            text-decoration: none
            font-weight: 300

            &:hover
                font-weight: 500

    .close-menu
        float: right    
        padding: 1.6rem 2rem
        cursor: pointer

        &:hover
            background: $dark_purple

// sections

section 
    width: 100%
    clear: both
    background-size: cover
    background-position: center center

section.divider
    background: $purple
    color: $white

    a
        color: $white
        &:hover

section.footer
    background: $gray
    
section.faq
    
    h3
        text-align: left
 
// backgrounds

.some-bg
    background-image: url('some_url.png')


// images

.video-placeholder,
.phone-placeholder
    margin: auto
    width: 100% 
    max-width: 640px

.phone-placeholder
    max-width: 320px

// lists

.features
    @include unstyled-list()
    color: $gray
    text-align: center
    font-size: 1.8rem
    
    li
        padding-bottom: 0.8rem

@media screen and ( min-width : 500px )

    .features
        display: inline-block
        padding: 20px
        border: 1px solid $gray
        @include border-radius( 8px )

.flags
    @include unstyled-list()
    text-align: center
    
    li
        @include border-radius( 50% )
        display: inline-block

    img
        @include border-radius( 50% )


.sitemap
    @include unstyled-list()
    text-align: center
    color: #666

    a
        color: #444
        text-decoration: none
        text-transform: uppercase

    .social-icons
        color: $white

    .call-to-action
        color: $white
        text-transform: uppercase


.team
    @include unstyled-list()
    text-align: center

    li
        margin: 2rem 1rem

    .name
        color: $purple
        font-size: 1.6rem

    .title
        color: $gray
        font-size: 1.7rem 

    img
        width: 180px
        margin-bottom: 1rem


// buttons
 
.zen-button
    @include border-radius( 4px )
    font-weight: 100
    border: 1px solid #ed282a 
    padding: 10px 10px 10px 10px 
    text-decoration: none 
    text-transform: uppercase
    display: inline-block
    text-shadow: -1px -1px 0 rgba(0,0,0,0.3)
    color: #FFFFFF
    background-color: #F15C5D 
    background-image: -webkit-gradient(linear, left top, left bottom, from(#F15C5D), to(#F69146))
    background-image: -webkit-linear-gradient(top, #F15C5D, #F69146)
    background-image: -moz-linear-gradient(top, #F15C5D, #F69146)
    background-image: -ms-linear-gradient(top, #F15C5D, #F69146)
    background-image: -o-linear-gradient(top, #F15C5D, #F69146)
    background-image: linear-gradient(to bottom, #F15C5D, #F69146)
//    filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#F15C5D, endColorstr=#F69146)

.zen-button:hover
    border: 1px solid #d51214
    background-color: #ed2d2e 
    background-image: -webkit-gradient(linear, left top, left bottom, from(#ed2d2e), to(#f47415))
    background-image: -webkit-linear-gradient(top, #ed2d2e, #f47415)
    background-image: -moz-linear-gradient(top, #ed2d2e, #f47415)
    background-image: -ms-linear-gradient(top, #ed2d2e, #f47415)
    background-image: -o-linear-gradient(top, #ed2d2e, #f47415)
    background-image: linear-gradient(to bottom, #ed2d2e, #f47415)
//    filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ed2d2e, endColorstr=#f47415)

@media screen and (max-width : 500px )

    .zen-button
        width: 100%
        @include border-radius( 0 )
        border: none

// wrappers

.page-wrapper

    background-color: $white
    width: 100%
    max-width: $max_width
    margin: auto
    padding: 0

.content-wrapper,
.negative-wrapper
    
    max-width: $max_width
    margin: auto
    padding: 1em

    &.squashed
        padding-top: 0
        padding-bottom: 0


// components

.large-margins
    padding-top: 4em
    padding-bottom: 4em

h3.feature
    margin-top: 2rem
    padding-bottom: 1rem
    color: $gray
    font-size: 2rem
    line-height: 3.1rem
    text-align: center

.feature-description  
    font-size: 1.4rem
    text-align: center

.review
    color: $off_white
    font-size: 1.2rem
    text-align: center

.reviewer
    font-size: 1rem
    font-weight: 500
    text-align: center

.burst
    border: 1px solid $light_gray
    @include border-radius( 2rem )
    padding: 2rem
    max-width: 180px
    color: $purple
    margin: 1.6rem auto

    .small
        font-size: 1.1rem
        font-weight: 300

    .large
        font-size: 2.8rem

.credit-card
    margin: auto
    @include border-radius( 24px )

// hide the last separator in an array list

.delimiter
    color: $light_gray

.some-selector
    span:last-child
        .delimiter
            display: none


// horizontal rules

hr.hairline
    background: #CCC
    height: 1px
    border: none
    width: 96%
    margin-left: auto
    margin-right: auto


// default table styles

table

    width: 100%

    tr
        &:nth-child(2n)
            background: #EEE
        &:hover
            background: $light_gray

    td
        padding: 2px


// footer stuff

.sitemap

    @include unstyled-list() 
    text-align: center
    border-top: 1px solid $light_gray
    padding-top: 1.4em

    li
        display: inline-block
        border-left: 1px solid $gray
        padding: 0 1em

        &:first-child
            border-left: none

.copyright
    text-align: center
    color: $gray
    padding: 1em


// effects

.hover-opacity
    
    &:hover
        @include opacity(64)


// hide from mobile devices

@media screen and (max-width: 480px)

    .hide-from-mobile
        display: none


// page-specific overrides

